--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
   <!--     FONTS     -->
   <!-- ───────────── -->
 
+  <!-- Roboto (Google Fonts) -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
+
   <!-- Poppins (Google Fonts) -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
