--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Miscelaneos</title>
-  <!-- <base href="/"> -->
-  <base href="">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -25,9 +24,6 @@
 
   <!-- Roboto (Google Fonts) -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
-
-  <!-- Poppins (Google Fonts) -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
