--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,13 @@
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
+  <!-- ───────────── -->
+  <!--     AUTH0     -->
+  <!-- ───────────── -->
+
+  <!-- Auth0 CDN -->
+  <script src="https://cdn.auth0.com/js/auth0-spa-js/1.0/auth0-spa-js.production.js"></script>
+
 </head>
 <body>
 
